final bugs fixed on blog page horizontal scroll

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -226,6 +226,11 @@
       padding-left: 0;
     }
   }
+
+  .blogPage,
+  .blogMain {
+    overflow-x: hidden;
+  }
 }
 
 // major breakpoint
