--- a/styles/styles.css
+++ b/styles/styles.css
@@ -987,6 +987,11 @@ textarea,
     width: 100%;
     padding-left: 0;
   }
+
+  .blogPage,
+.blogMain {
+    overflow-x: hidden;
+  }
 }
 @media (max-width: 480px) {
   h1 {
